Added working contact form, moved footer out of contactform so it displays always

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,13 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  /* text-align: center; */
+}
+
+.dustbunny {
+  width: 110px;
+  height: 110px;
+  object-fit: contain;
 }
 
 .logo {
@@ -39,4 +45,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+body {
+  font-family: "Pacifico", cursive;
 }
