--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap");
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -31,6 +33,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+.test {
+  animation: logo-spin 2s linear infinite;
 }
 
 @media (prefers-reduced-motion: no-preference) {
